2009-12-08  Marcus Brinkmann  <marcus@g10code.de>

	Update to libtool 2.2.6a.
	* configure.ac: Invoke AC_CONFIG_MACRO_DIR.
	(AC_LIBTOOL_WIN32_DLL, AC_LIBTOOL_RC): Replace by ...
	(LT_PREREQ, LT_INIT, LT_LANG): ... these.
	* config.guess, config.sub, install-sh, ltmain.sh, m4/libtool.m4:
	Updated to libtool 2.2.6a.
	* m4/ltoptions.m4, m4/ltsugar.m4, m4/ltversion.m4,
	m4/lt~obsolete.m4: New files from libtool 2.2.6a.

2009-08-05  Werner Koch  <wk@g10code.com>

	* configure.ac: Test for sys/msg.h.

2009-04-23  Werner Koch  <wk@g10code.com>

	* README: Add a section on build problems.

2009-01-22  Werner Koch  <wk@g10code.com>

	* configure.ac: Bump LT version to C17/A7/R0 to mark the start of
	a new development series.

2009-01-22  Werner Koch  <wk@g10code.com>

	Release 1.4.4.
	
	* configure.ac: Bump LT version to C16/A5/R2.

2008-10-30  Werner Koch  <wk@g10code.com>

	* configure.ac: Remove option --enable-gcc-warnings.  Autodetect
	useful gcc warnings in maintainer mode.

2008-09-18  Werner Koch  <wk@g10code.com>

	Release 1.4.3.

	* configure.ac: Bump LT version to C16/A5/R1.

2008-09-15  Werner Koch  <wk@g10code.com>

	* configure.ac: Cehck for syslog.

2008-09-08  Werner Koch  <wk@g10code.com>

	Release 1.4.2.

2008-09-01  Werner Koch  <wk@g10code.com>

	Release 1.4.2rc2.

	* configure.ac: Update svn_revision macro.

2008-08-22  Werner Koch  <wk@g10code.com>

	* configure.ac: Add option --enable-hmac-binary-check.
	(DL_LIBS): Check whether -ldl is required.

2008-08-19  Werner Koch  <wk@g10code.com>

	Release 1.4.2rc1.
	
	* configure.ac: Bump LT version to C16/A5/R0.

2008-08-18  Werner Koch  <wk@g10code.com>

	* Makefile.am (EXTRA_DIST): Remove the unused BUGS file.

2008-08-15  Werner Koch  <wk@g10code.com>

	* configure.ac (AH_BOTTOM): Define GCRY_GPG_ERR_NOT_OPERATIONAL.

2008-07-05  Werner Koch  <wk@g10code.com>

	* random/: New.
	* Makefile.am (DIST_SUBDIRS): Add random.
	* configure.ac (AC_CONFIG_FILES): Add random/Makefile.
